--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="cabecera">
+        ccccc
+        <link rel="stylesheet" href="css/cabecera/cabecera.css">
+    </div>
+    <div id="cuerpoI">
+        iiiii
+        <link rel="stylesheet" href="css/cuerpoI/cuerpoI.css">
+    </div>
+    <div id="cuerpoD">
+        dddddd
+        <link rel="stylesheet" href="css/cuerpoD/cuerpoD.css">
+    </div>
 </body>
 </html>
