--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/comun/comun.css">
     <title>Document</title>
 </head>
 <body>
     <div id="cabecera">
-        ccccc
         <link rel="stylesheet" href="css/cabecera/cabecera.css">
     </div>
     <div id="cuerpoI">
-        iiiii
         <link rel="stylesheet" href="css/cuerpoI/cuerpoI.css">
+        <div id="vacio">
+        </div>
+        <div id="contenido">
+            <p>Facebook te ayuda a comunicarte y compartir con las personas que forman parte de tu vida.</p>
+            <img src="imagenes/cuerpoI/imagenMundo.png" id="miImagen" alt="">            
     </div>
+</div>
     <div id="cuerpoD">
-        dddddd
         <link rel="stylesheet" href="css/cuerpoD/cuerpoD.css">
     </div>
 </body>
